Bug 1412272 - Have ComputePartialPrerenderArea() handle the cases where aDirtyRect is larger than aPrerenderSize. r=mstange

Rendering at least aDirtyRect is more important than staying under
aPrerenderSize, so that's what we do.

MozReview-Commit-ID: 8Ze1biaNzqX

--HG--
extra : rebase_source : b04aedafa8432004a716f0cb4b4c5dc6c418dfda